src/test/deca/context/invalid/bad_protected_advanced.deca
//ERROR :12
class Animal {
    protected float poids;
    protected int nbPates;

}

class Vegetal {

    void initParam(float newPoids, int NewNbPates) {
        Animal oiseau = new Animal();
        print(oiseau.nbPates);
    }
}